# pytify

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py  webserver.py
database/: database.py
pytify/: settings.py  webserver.py
pytify/converter/: converter.py
pytify/database/: database.py
pytify/yt_handle/: download_video.py
views/: index.html
yt_handle/: download_video.py
