[project]
name = "pytify"
version = "0.1.0"
description = ""
authors = [
    {name = "Piotr Bosowski",email = "piotr.bosowski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13" 
dependencies = [
    "pillow (<11.0)",
    "pip (>=25.0.1,<26.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "yarg (==0.1.9)",
    "pytube (>=15.0.0,<16.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "websockets (>=14.2,<15.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "proglog (>=0.1.10,<0.2.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "decorator (>=5.1.1,<6.0.0)",
    "docopt (>=0.6.2,<0.7.0)",
    "pipreqs (>=0.5.0,<0.6.0)",
    "brotli (>=1.1.0,<2.0.0)",
    "idna (>=3.10,<4.0)",
    "bottle (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
